tests/NormalTests/paczka1/fuzzy1/64745637.err
Error in line 7: A69y S685 13y,7
Error in line 6: A692 S685 95,5
Error in line 12: A692 A313 50,2
Error in line 14: A692 S685 23,0
